Fix grid gaps

--- a/_src/assets/scss/components/_buttons.scss
+++ b/_src/assets/scss/components/_buttons.scss
@@ -79,9 +79,11 @@
   left: 50%;
   top: 0;
   transform: translate(-50%, -50%);
-  animation-name: arrow;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
+  &:hover {
+    animation-name: arrow;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+  }
 }
 
 @keyframes arrow {
